[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suancaiyu-utils"
version = "1.0.0"
authors = [
  { name="SuancaiyuPro", email="2389078986@qq.com" },
]
description = "A collection of useful Python utilities for API interaction and data formatting."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/SuancaiyuPro/suancaiyuwudinb"
"Bug Tracker" = "https://github.com/SuancaiyuPro/suancaiyuwudinb/issues"
